Stable backend version 0.2
